fix: #28 fix horizontal overflow on contact page

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -350,6 +350,7 @@ article h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    overflow-x: hidden;
 }
 
 .contact-img {
